[package]
name = "redgex"
version = "0.2.0"
edition = "2024"
resolver = "2"
repository = "https://github.com/RedYou1/RedGex"
description = "simple regex library"
license = "Apache-2.0"
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
allow_attributes = "warn"
missing-const-for-fn = "deny"
unused-enumerate-index = "deny"
as-underscore = "deny"
str-to-string = "deny"
too-many-lines = "deny"
todo = "warn"
get-unwrap = "warn"
unwrap-used = "warn"
unwrap_in_result = "warn"
map_unwrap_or = "warn"

[dependencies]
